--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "build:packaging": "cp package.json README.md LICENSE ./dist",
     "build": "yarn build:ts && yarn build:packaging",
     "lint": "yarn eslint .",
-    "test:cli": "ts-node ./tests/main.ts",
+    "test:cli": "ts-node ./tests/example-cli.ts",
     "test:unit": "jest --colors",
     "test:unit:coverage": "JEST_COLLECT_COVERAGE=1 jest --colors"
   },
